[package]
authors = ['Unique One <hello@uniqueone.network>']
description = 'Unique One Appchain Runtime.'
edition = '2021'
homepage = 'https://uniqueone.network'
license = 'Apache-2.0'
name = 'uniqueone-appchain-runtime'
publish = false
repository = 'https://github.com/Unique-One-Official/uniqueone-appchain'
version = '1.5.9'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30' }

[dependencies]
# External Dependencies
codec = { package = 'parity-scale-codec', version = '3.0.0', default-features = false, features = ['derive', 'max-encoded-len'] }
serde = { version = "1.0.136", default-features = false, features = ['derive'], optional = true }
scale-info = { version = '2.1.2', default-features = false, features = ['derive'] }
hex-literal = { version = '0.3.4', default-features = false, optional = true }
log = { version = '0.4' }

# Substrate Dependencies
## Substrate Primitive Dependencies
beefy-primitives = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
beefy-merkle-tree = { git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v0.9.30" }
sp-api = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
sp-block-builder = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
sp-consensus-babe = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
sp-core = { version = "6.0.0", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
sp-inherents = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
sp-io = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sp-mmr-primitives = { git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v0.9.30" }
sp-offchain = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
sp-runtime = { version = "6.0.0", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
sp-sandbox = { version = "0.10.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sp-session = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
sp-staking = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
sp-std = { version = "4.0.0", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
sp-transaction-pool = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
sp-version = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }

## Substrate Frame Dependencies
frame-benchmarking = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false, optional = true }
frame-executive = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
frame-support = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
frame-system = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
frame-system-benchmarking = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false, optional = true }
frame-system-rpc-runtime-api = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
frame-try-runtime = { version = "0.10.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30", optional = true }
frame-election-provider-support = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }

## Substrate Pallet Dependencies
pallet-assets = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
pallet-authorship = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
pallet-babe = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
pallet-balances = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
pallet-beefy = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
pallet-beefy-mmr = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
pallet-grandpa = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
pallet-im-online = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
pallet-mmr = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
pallet-randomness-collective-flip = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
pallet-session = { version = "4.0.0-dev", features = [ "historical" ], git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30", default-features = false }
pallet-session-benchmarking = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30", default-features = false, optional = true }
pallet-sudo = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
pallet-timestamp = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
pallet-transaction-payment = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
pallet-proxy = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
pallet-treasury = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
pallet-democracy = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
pallet-scheduler = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
pallet-collective = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
pallet-society = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
pallet-utility = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
pallet-identity = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
pallet-contracts = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
pallet-contracts-primitives = { version = "6.0.0", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
pallet-contracts-rpc-runtime-api = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
pallet-uniques = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
pallet-offences = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30", default-features = false }
pallet-offences-benchmarking = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30", default-features = false, optional = true }

# Octopus Dependencies
## Octopus Pallet Dependencies
pallet-octopus-appchain = { git = 'https://github.com/octopus-network/octopus-pallets.git', branch = 'main', default-features = false }
pallet-octopus-bridge = { git = 'https://github.com/octopus-network/octopus-pallets.git', branch = 'main', default-features = false }
pallet-octopus-lpos = { git = 'https://github.com/octopus-network/octopus-pallets.git', branch = 'main', default-features = false }
pallet-octopus-upward-messages = { git = 'https://github.com/octopus-network/octopus-pallets.git', branch = 'main', default-features = false }

# benchmarking
pallet-octopus-bridge-benchmarking = { git = "https://github.com/octopus-network/octopus-pallets.git", branch = "main", default-features = false, optional = true }
pallet-octopus-appchain-benchmarking = { git = "https://github.com/octopus-network/octopus-pallets.git", branch = "main", default-features = false, optional = true }

# Local Dependencies
## Unet Pallet Dependencies
unet-orml-tokens = {  path = '../pallets/unet-orml-tokens', default-features = false }
unet-orml-traits = {  path = '../pallets/unet-orml-traits', default-features = false }
unet-orml-currencies = {  path = '../pallets/unet-orml-currencies', default-features = false }
unet-orml-nft = {  path = '../pallets/unet-orml-nft', default-features = false }
unet-traits = {  path = '../pallets/unet-traits', default-features = false }
unet-nft = {  path = '../pallets/unet-nft', default-features = false }
unet-order = {  path = '../pallets/unet-order', default-features = false }
unet-auction = {  path = '../pallets/unet-auction', default-features = false }
unet-config = {  path = '../pallets/unet-config', default-features = false }
# unet-rpc-runtime-api = {  path = '../pallets/unet-rpc/runtime-api', default-features = false }
# chain-extension = {  path = '../pallets/chain-extension', default-features = false }

[features]
default = ['std']
std = [
    # External Dependencies
	'codec/std',
    'serde/std',
	'scale-info/std',
    'log/std',

	# Substrate Dependencies
	## Substrate Primitive Dependencies
	'beefy-primitives/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-babe/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-mmr-primitives/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-sandbox/std',
    'sp-session/std',
    'sp-staking/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',

	## Substrate Frame Dependencies
	'frame-executive/std',
    'frame-support/std',
    "frame-system-benchmarking?/std",
    'frame-system-rpc-runtime-api/std',
    'frame-system/std',
    'frame-try-runtime?/std',
    'frame-election-provider-support/std',

	## Substrate Pallet Dependencies
    'pallet-assets/std',
    'pallet-authorship/std',
    'pallet-babe/std',
    'pallet-balances/std',
    'pallet-beefy-mmr/std',
    'pallet-beefy/std',
    'pallet-grandpa/std',
    'pallet-im-online/std',
    'pallet-mmr/std',
    'pallet-randomness-collective-flip/std',
    'pallet-session/std',
 	"pallet-session-benchmarking?/std",
    'pallet-sudo/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-transaction-payment/std',
    'pallet-proxy/std',
    'pallet-treasury/std',
    'pallet-democracy/std',
    'pallet-scheduler/std',
    'pallet-collective/std',
    'pallet-society/std',
    'pallet-utility/std',
    'pallet-identity/std',
	'pallet-contracts/std',
    'pallet-contracts-primitives/std',
    'pallet-contracts-rpc-runtime-api/std',
	'pallet-uniques/std',
	'pallet-offences/std',
    "pallet-offences-benchmarking?/std",

	# Octopus Dependencies
	## Octopus Pallet Dependencies
	'pallet-octopus-appchain/std',
	'pallet-octopus-bridge/std',
    'pallet-octopus-lpos/std',
    'pallet-octopus-upward-messages/std',

	"pallet-octopus-bridge-benchmarking?/std",
	"pallet-octopus-appchain-benchmarking?/std",
	# Unet Dependencies
	## Unet Pallet Dependencies
	'unet-orml-tokens/std',
    'unet-orml-traits/std',
    'unet-orml-currencies/std',
    'unet-orml-nft/std',
    'unet-traits/std',
    'unet-nft/std',
    'unet-order/std',
    'unet-auction/std',
    'unet-config/std',
    # 'unet-rpc-runtime-api/std',
    # 'chain-extension/std',

]
runtime-benchmarks = [
    # External Dependencies
	'hex-literal',

	# Substrate Dependencies
	## Substrate Primitive Dependencies
	'sp-runtime/runtime-benchmarks',

	## Substrate Frame Dependencies
	'frame-benchmarking/runtime-benchmarks',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'frame-election-provider-support/runtime-benchmarks',

	## Substrate Pallet Dependencies
	'pallet-assets/runtime-benchmarks',
	'pallet-babe/runtime-benchmarks',
	'pallet-grandpa/runtime-benchmarks',
	'pallet-im-online/runtime-benchmarks',
	'pallet-mmr/runtime-benchmarks',
    'pallet-balances/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'pallet-proxy/runtime-benchmarks',
    'pallet-treasury/runtime-benchmarks',
    'pallet-democracy/runtime-benchmarks',
    'pallet-scheduler/runtime-benchmarks',
    'pallet-collective/runtime-benchmarks',
    'pallet-society/runtime-benchmarks',
    'pallet-utility/runtime-benchmarks',
    'pallet-identity/runtime-benchmarks',
	"pallet-offences-benchmarking/runtime-benchmarks",
	"pallet-session-benchmarking/runtime-benchmarks",
	"pallet-uniques/runtime-benchmarks",

	"pallet-octopus-upward-messages/runtime-benchmarks",
	"pallet-octopus-lpos/runtime-benchmarks",
	"pallet-octopus-bridge-benchmarking/runtime-benchmarks",
	"pallet-octopus-appchain-benchmarking/runtime-benchmarks",

    # Custom Pallets
    # 'unet-auction/runtime-benchmarks',
	# 'unet-nft/runtime-benchmarks',
	# 'unet-config/runtime-benchmarks',
	# 'unet-order/runtime-benchmarks',
]
try-runtime = [
	'frame-try-runtime',
	'frame-executive/try-runtime',
	'frame-system/try-runtime',
	'frame-support/try-runtime',
	'pallet-assets/try-runtime',
	'pallet-authorship/try-runtime',
	'pallet-babe/try-runtime',
	'pallet-balances/try-runtime',
	'pallet-grandpa/try-runtime',
	'pallet-im-online/try-runtime',
	'pallet-mmr/try-runtime',
	'pallet-offences/try-runtime',
	'pallet-session/try-runtime',
	'pallet-sudo/try-runtime',
	'pallet-timestamp/try-runtime',
	'pallet-transaction-payment/try-runtime',
	'pallet-uniques/try-runtime',
]
# Force `sp-sandbox` to call into the host resident executor. One still need to make sure
# that `sc-executor` gets the `wasmer-sandbox` feature which happens automatically when
# specified on the command line.
# Don't use that on a production chain.
wasmer-sandbox = ["sp-sandbox/wasmer-sandbox"]
