[package]
authors = ['Unique One <hello@uniqueone.network>']
edition = '2018'
homepage = 'https://uniqueone.network'
license = 'Apache-2.0'
name = 'chain-extension'
readme = 'README.md'
repository = 'https://github.com/Unique-One-Official/uniqueone-appchain'
version = '1.0.0'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.2", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = '1.0', default-features = false, features = ['derive'] }

sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
sp-core = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
pallet-randomness-collective-flip = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
pallet-contracts = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }

unet-traits = { default-features = false, path = "../unet-traits" }
unet-nft = { default-features = false, path = "../unet-nft" }

[features]
default = ['std']
std = [
	"codec/std",
	"sp-core/std",
	"sp-std/std",
	"sp-runtime/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-randomness-collective-flip/std",
    "pallet-contracts/std",
	"unet-traits/std",
    "unet-nft/std",
]
