[package]
authors = ['Unique One <hello@uniqueone.network>']
edition = '2018'
homepage = 'https://uniqueone.network'
license = 'Apache-2.0'
name = 'pallet-currencies'
readme = 'README.md'
repository = 'https://github.com/Unique-One-Official/uniqueone-appchain'
version = '0.4.1-dev'

[dependencies]
serde = { version = "1.0.124", optional = true }
codec = { package = 'parity-scale-codec', version = '2.0.0', default-features = false, features = ['derive'] }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8", default-features = false }

frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8", default-features = false }

orml-traits = { path = "../../vendors/orml/traits", default-features = false }
orml-utilities = { path = "../../vendors/orml/utilities", default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
tokens = { package = "orml-tokens", path = "../../vendors/orml/tokens" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"frame-system/std",
	"orml-traits/std",
	"orml-utilities/std",
]