[package]
name = "pallet-ethereum-chain-id"
authors = ['Unique One <hello@uniqueone.network>']
edition = "2018"
version = "1.0.1"

[dependencies]
serde = { version = "1.0.130", optional = true, features = [ "derive" ] }

# Substrate
frame-support = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
frame-system = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
parity-scale-codec = { version = "3.0.0", default-features = false, features = [ "derive" ] }
scale-info = { version = "2.0.1", default-features = false, features = [ "derive" ] }

[features]
default = [ "std" ]
std = [
	"frame-support/std",
	"frame-system/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"serde",
]
try-runtime = [ "frame-support/try-runtime" ]