[package]
authors = ['Unique One <hello@uniqueone.network>']
edition = '2018'
homepage = 'https://uniqueone.network'
license = 'Apache-2.0'
name = 'unet-auction'
readme = 'README.md'
repository = 'https://github.com/Unique-One-Official/uniqueone-appchain'
version = '1.0.0'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = 'parity-scale-codec', version = '2.2', default-features = false, features = ['derive', 'max-encoded-len'] }
serde = { version = '1.0.130', default-features = false, features = ['derive'], optional = true }
scale-info = { version = '1.0', default-features = false, features = ['derive'] }

sp-core = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
frame-benchmarking = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', optional = true }
pallet-proxy = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
pallet-timestamp = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
unet-orml-traits = { version = "0.4.1-dev", default-features = false, path = "../unet-orml-traits" }
unet-traits = { default-features = false, path = "../unet-traits" }

[dev-dependencies]
sp-io = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
pallet-balances = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
pallet-utility = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
unet-orml-nft = { path = "../unet-orml-nft" }
unet-config = { path = "../unet-config" }
unet-nft = { path = "../unet-nft" }

[features]
default = ["std"]
std = [
    "serde/std",
    "codec/std",
	"sp-core/std",
	"sp-std/std",
	"sp-runtime/std",
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking/std",
    "pallet-proxy/std",
    "pallet-timestamp/std",
    "unet-orml-traits/std",
	"unet-traits/std",
]
runtime-benchmarks = ["frame-benchmarking"]
