[package]
authors = ['Unique One <hello@uniqueone.network>']
edition = '2018'
homepage = 'https://uniqueone.network'
license = 'Apache-2.0'
name = 'unet-config'
readme = 'README.md'
repository = 'https://github.com/Unique-One-Official/uniqueone-appchain'
version = '1.0.0'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = 'parity-scale-codec', version = '3.0.0', default-features = false, features = ['derive', 'max-encoded-len'] }
serde = { version = '1.0.130', default-features = false, features = ['derive'], optional = true }
scale-info = { version = '2.0.1', default-features = false, features = ['derive'] }

sp-core = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.18' }
sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.18' }
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.18' }
frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.18' }
frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.18' }
pallet-proxy = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.18' }
pallet-timestamp = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.18' }
unet-traits = { default-features = false, path = "../unet-traits" }

[dev-dependencies]
sp-io = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.18' }
pallet-balances = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.18' }
pallet-utility = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.18' }

[features]
default = ['std']
std = [
	"serde",
	"codec/std",
    "sp-core/std",
	"sp-std/std",
    "sp-runtime/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-proxy/std",
    "pallet-timestamp/std",
    "unet-traits/std",
]
