[package]
authors = ['Unique One <hello@uniqueone.network>']
edition = '2021'
homepage = 'https://uniqueone.network'
license = 'Apache-2.0'
name = 'unet-config'
readme = 'README.md'
repository = 'https://github.com/Unique-One-Official/uniqueone-appchain'
version = '1.0.0'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = 'parity-scale-codec', version = '3.0.0', default-features = false, features = ['derive', 'max-encoded-len'] }
serde = { version = "1.0.136", default-features = false, features = ['derive'], optional = true }
scale-info = { version = '2.1.2', default-features = false, features = ['derive'] }

sp-core = { version = "6.0.0", default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.30' }
sp-std = { version = "4.0.0", default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.30' }
sp-runtime = { version = "6.0.0", default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.30' }
frame-support = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.30' }
frame-system = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.30' }
pallet-proxy = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.30' }
pallet-timestamp = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.30' }
unet-traits = { default-features = false, path = "../unet-traits" }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.30', optional = true }

[dev-dependencies]
sp-io = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.30' }
pallet-balances = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.30' }
pallet-utility = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.30' }

[features]
default = ['std']
std = [
	"serde",
	"codec/std",
    "sp-core/std",
	"sp-std/std",
    "sp-runtime/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-proxy/std",
    "pallet-timestamp/std",
    "unet-traits/std",
]
runtime-benchmarks = ["frame-benchmarking"]
