[package]
authors = ['Unique One <hello@uniqueone.network>']
edition = '2021'
homepage = 'https://uniqueone.network'
license = 'Apache-2.0'
name = 'unet-config'
readme = 'README.md'
repository = 'https://github.com/Unique-One-Official/uniqueone-appchain'
version = '1.0.0'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = 'parity-scale-codec', version = '3.0.0', default-features = false, features = ['derive', 'max-encoded-len'] }
serde = { version = '1.0.130', default-features = false, features = ['derive'], optional = true }
scale-info = { version = '2.0.1', default-features = false, features = ['derive'] }

sp-core = { version = "6.0.0", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
sp-std = { version = "4.0.0", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
sp-runtime = { version = "6.0.0", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
frame-support = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
frame-system = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
pallet-proxy = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
pallet-timestamp = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
unet-traits = { default-features = false, path = "../unet-traits" }
frame-benchmarking = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false, optional = true }

[dev-dependencies]
sp-io = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
pallet-balances = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
pallet-utility = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }

[features]
default = ['std']
std = [
	"serde",
	"codec/std",
    "sp-core/std",
	"sp-std/std",
    "sp-runtime/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-proxy/std",
    "pallet-timestamp/std",
    "unet-traits/std",
]
runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]
