[package]
authors = ['Unique One <hello@uniqueone.network>']
edition = '2021'
homepage = 'https://uniqueone.network'
license = 'Apache-2.0'
name = 'unet-nft'
readme = 'README.md'
repository = 'https://github.com/Unique-One-Official/uniqueone-appchain'
version = '1.0.0'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = 'parity-scale-codec', version = '3.0.0', default-features = false, features = ['derive', 'max-encoded-len'] }
serde = { version = '1.0.130', default-features = false, features = ['derive'] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
scale-info = { version = '2.0.1', default-features = false, features = ['derive'] }

sp-std = { version = "4.0.0", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
sp-core = { version = "6.0.0", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
frame-support = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
sp-runtime = { version = "6.0.0", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
frame-system = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
frame-benchmarking = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false, optional = true }
pallet-proxy = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
pallet-timestamp = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
unet-orml-traits = { version = "0.4.1-dev", default-features = false, path = "../unet-orml-traits" }
unet-orml-nft = { version = "0.4.1-dev", default-features = false, path = "../unet-orml-nft" }
unet-traits = { default-features = false, path = "../unet-traits" }
pallet-octopus-support = { git = 'https://github.com/octopus-network/octopus-pallets.git', branch = 'main', default-features = false }

[dev-dependencies]
sp-io = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
pallet-balances = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
pallet-utility = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }

[features]
default = ['std']
std = [
	"serde/std",
    "serde_json/std",
	"scale-info/std",
	"codec/std",
    "sp-core/std",
	"sp-std/std",
    "sp-runtime/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-proxy/std",
    "pallet-timestamp/std",
	"unet-orml-traits/std",
    "unet-orml-nft/std",
    "unet-traits/std",
    "pallet-octopus-support/std"
]
runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]
